First version of ModuleClassLoader